# datachecker

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build_docker.sh  install_deps.sh  manifest.xml  package.xml  start_docker.sh
config/: ecocar_settings.yaml
launch/: datachecker.launch
src/: bagfile_synopsis.cc  datachecker.cc  datachecker.cpp  generic_message.h  settings.yaml
temp/: test_bag.bag  test_bag.bag.synopsis
